k8s/namespaces/development/buildkit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkit
  namespace: development
  labels:
    app.kubernetes.io/name: buildkit
spec:
  selector:
    app.kubernetes.io/name: buildkit
  ports:
  - port: 1234
    targetPort: 1234
    protocol: TCP
